crates/core/tests/ui/es_mixed_attr_keys.stderr
error: `#[batpak(...)]` attribute must contain either config keys (`input`, `cache_version`, `error`) or an event-binding pair (`event`, `handler`), not both
  --> tests/ui/es_mixed_attr_keys.rs:11:1
   |
11 | #[batpak(input = JsonValueInput, event = Ping, handler = on_ping)]
   | ^
